@@ -1,3 +1,9 @@
+2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-tag-table): Insert the images after the table, so that
+	they're not covered by the table colourisation, which often looked
+	awkward.
+
 2013-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* eww.el (eww-detect-charset): Improve regexp; move backward.
